syntax = "proto3";


package timeline; 
option go_package = "github.com/Sannrox/tradepipe/pkg/grpc/timeline";


message DownloadAllAsk {
   string processId = 1;
}

message DownloadAllReturn {
   string processId = 1;
   string error = 2;
}

